bpo-30281: Fix the default value for stop in PySlice_Unpack() (#1480)